docs/versions/4.22/groups/M3.md
---
layout: group
group_id: M3
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

This remediation configures audit rules to monitor Discretionary Access Control (DAC) modifications, specifically file permission and ownership changes.

## Settings

| Rule | Description |
|------|-------------|
| `chmod` | Audit file permission changes via chmod |
| `chown` | Audit file ownership changes via chown |

## Implementation

The remediation applies audit rules via MachineConfig:

```yaml
apiVersion: machineconfiguration.openshift.io/v1
kind: MachineConfig
metadata:
  name: 75-audit-dac-medium
  labels:
    machineconfiguration.openshift.io/role: master
spec:
  config:
    ignition:
      version: 3.2.0
    storage:
      files:
        - path: /etc/audit/rules.d/75-dac-modification.rules
          mode: 0644
          overwrite: true
          contents:
            inline: |
              ## DAC modification monitoring
              -a always,exit -F arch=b64 -S chmod -S fchmod -S fchmodat -F auid>=1000 -F auid!=unset -k perm_mod
              -a always,exit -F arch=b32 -S chmod -S fchmod -S fchmodat -F auid>=1000 -F auid!=unset -k perm_mod
              -a always,exit -F arch=b64 -S chown -S fchown -S fchownat -S lchown -F auid>=1000 -F auid!=unset -k perm_mod
              -a always,exit -F arch=b32 -S chown -S fchown -S fchownat -S lchown -F auid>=1000 -F auid!=unset -k perm_mod
```

## Compliance Checks Remediated

| Check | Profile | Description | Docs |
|-------|---------|-------------|------|
| `rhcos4-e8-worker-audit-rules-dac-modification-chmod` | E8 | Audit chmod syscalls | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_dac_actions) |
| `rhcos4-e8-worker-audit-rules-dac-modification-chown` | E8 | Audit chown syscalls | [📖](https://github.com/ComplianceAsCode/content/tree/master/linux_os/guide/auditing/auditd_configure_rules/audit_dac_actions) |

<div class="source-files">
<h4>Source Remediation Files</h4>
<ul>
<li>medium/rhcos4-e8-worker-audit-rules-dac-modification-chmod.yaml</li>
<li>medium/rhcos4-e8-worker-audit-rules-dac-modification-chown.yaml</li>
</ul>
</div>

## Verification

After applying, verify audit rules are loaded:

```bash
oc debug node/<node-name> -- chroot /host auditctl -l | grep perm_mod
```

## Security Impact

Monitoring DAC modifications helps detect:
- Unauthorized permission escalations
- Attempts to modify critical file permissions
- Potential privilege escalation attempts
